notebook 2 changes and README ready for day 1!

--- a/intro_python_2.ipynb
+++ b/intro_python_2.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per modificare lo stile dei grafici si usano molti _kwargs_. I più importanti sono _c_ (colore), _lw_ (linewidth o spessore), _ls_ (linestyle o stile) e _s_ (size o grandezza del marker) e _marker_ (tipo di marker) per `plt.scatter()`. [Clicca qui per più informazioni](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html)"
+    "Per modificare lo stile dei grafici si usano molti _**kwargs_. I più importanti sono _c_ (colore), _lw_ (linewidth o spessore), _ls_ (linestyle o stile) e _s_ (size o grandezza del marker) e _marker_ (tipo di marker) per `plt.scatter()`. [Clicca qui per più informazioni](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.scatter.html)"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Qualsiasi parte della _figure_ può essere modificata, però molto spesso è conveniente creare uno stile con tutte le proprie modifiche inserite di default. Questo può essere attivato con `plt.style.use()`. Matplotlib è dotato di [alcuni stili preinstallati](https://matplotlib.org/stable/gallery/style_sheets/style_sheets_reference.html). Consiglio vivamente di scaricare gli [stili SciencePlots](https://github.com/garrettj403/SciencePlots) disponibili su GitHub. [Clicca qui per più informazioni.](https://matplotlib.org/stable/tutorials/introductory/customizing.html)"
+    "Qualsiasi parte della _Figure_ può essere modificata, però molto spesso è conveniente creare uno stile con tutte le proprie modifiche inserite di default. Questo può essere attivato con `plt.style.use()`. Matplotlib è dotato di [alcuni stili preinstallati](https://matplotlib.org/stable/gallery/style_sheets/style_sheets_reference.html). Consiglio vivamente di scaricare gli [stili SciencePlots](https://github.com/garrettj403/SciencePlots) disponibili su GitHub. [Clicca qui per più informazioni.](https://matplotlib.org/stable/tutorials/introductory/customizing.html)"
    ]
   },
   {
@@ -294,12 +294,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can plot everything! We are using the "
+    "Ora per il plot finale usiamo `plt.plot()` per il cerchio e `plt.scatter()` per i punti, i colori sono già stati scelti precedentemente! Per inserire il rettangolo usiamo ora un poco di sintassi _esplicita_. Inizializziamo la _Figure_ e l'_Axes_ usando [`plt.subplots()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.subplots.html) questo ci permetterà di specificare il layout _constrained_ che rimuoverà spazio non necessario ai bordi e la _figsize_.\n",
+    "\n",
+    "Per aggiungere il rettangolo creiamo la _patch_ usando la funzione appena importata e poi la aggiungiamo all'_Axes_ con []`Axes.add_patch()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.add_patch.html).\n",
+    "\n",
+    "Per finire usiamo [`Axes.axis()`](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.axis.html) e lo settiamo in _off_ per nascondere gli assi."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +312,7 @@
        "(-1.1, 1.1, -1.1, 1.1)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -332,7 +336,7 @@
     "rect = Rectangle((-1, -1), 2, 2, lw=3, ec=\"black\", fc=\"None\", zorder=3)\n",
     "ax.add_patch(rect)\n",
     "\n",
-    "plt.axis(\"off\")\n",
+    "ax.axis(\"off\")\n",
     "# plt.savefig(\"images/monte_carlo.png\", dpi=100)"
    ]
   },
