--- a/intro_python_2.ipynb
+++ b/intro_python_2.ipynb
@@ -439,6 +439,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intanto usiamo "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
