--- a/intro_python_1.ipynb
+++ b/intro_python_1.ipynb
@@ -468,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per prima cosa generiamo i punti a caso. Possiamo usare `Generator.uniform()` che genera numeri random in una distribuzione uniforme in un intervallo. I _**kwargs_ sono _low, high_ (che definiscono l'intervallo) e _size_ che specifichiamo essere il numero di punti che vogliamo generare."
+    "Per prima cosa generiamo i punti a caso. Possiamo usare [`Generator.uniform()`](https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.uniform.html) che genera numeri random in una distribuzione uniforme in un intervallo. I _**kwargs_ sono _low, high_ (che definiscono l'intervallo) e _size_ che specifichiamo essere il numero di punti che vogliamo generare."
    ]
   },
   {
