last changes before day 1

--- a/intro_python_2.ipynb
+++ b/intro_python_2.ipynb
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intanto usiamo "
+    "Intanto usiamo `Generator.choice()` come funzione per generare i movimenti ad ogni step temporale.\n"
    ]
   },
   {
@@ -467,6 +467,14 @@
     "\n",
     "single_walk = rng.choice([-1, 1], time)\n",
     "single_walk"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Come fare quindi? si potrebbe fare per esempio un ciclo for"
    ]
   },
   {
@@ -530,7 +538,16 @@
     }
    ],
    "source": [
+    "# %%timeit\n",
     "single_walk.cumsum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con questo _one-liner_ si controlla che le due distanze"
    ]
   },
   {
