--- a/intro_python_1.ipynb
+++ b/intro_python_1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'arancina è femmina\n",
+      "Mmmmmh (10.21093+5j)\n",
+      "Per arrotondare... -15.67\n",
+      "e = [1, [10, 'carlo'], False, 10, -15.666]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"L'arancina è femmina\")\n",
     "print(f\"Mmmmmh {d}\")\n",
@@ -106,9 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index = -3\n",
+      "index = -1\n",
+      "index = 1\n",
+      "index = 3\n",
+      "index = 5\n",
+      "index = 7\n",
+      "7 misura massima di ogni cosa\n",
+      "index = 9\n"
+     ]
+    }
+   ],
    "source": [
     "for index in range(-3, 10, 2):\n",
     "    print(f\"{index = }\")\n",
@@ -126,9 +152,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 [10, 'carlo']\n",
+      "2 False\n",
+      "3 10\n",
+      "4 -15.666\n"
+     ]
+    }
+   ],
    "source": [
     "for idx, element in enumerate(e):\n",
     "    print(idx, element)"
@@ -144,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[10, 'carlo'], False, 10, -15.666]\n",
+      "[[10, 'carlo'], False, 10]\n",
       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n",
       "['o', 'e', 'i', 'u', 'o', 'o', 'i', 'a', 'e']\n"
      ]
@@ -160,7 +198,7 @@
    "source": [
     "print(e[1:-1])\n",
     "print([x**2 for x in range(10)])\n",
-    "print([i for i in \"Lorem ipsum dolor sit amet\" if i in 'aeiou'])"
+    "print([i for i in \"Lorem ipsum dolor sit amet\" if i in \"aeiou\"])"
    ]
   },
   {
@@ -209,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +260,7 @@
     }
    ],
    "source": [
-    "def operazione(a, b, sum=True):\n",
+    "def operazione(a, b, is_sum=True):\n",
     "    if sum:\n",
     "        print(f\"{a} + {b} = {a+b}\")\n",
     "        return a + b\n",
@@ -230,7 +268,8 @@
     "        print(f\"{a} - {b} = {a-b}\")\n",
     "        return a - b\n",
     "\n",
-    "var1 = operazione(5, 2, sum=False)\n",
+    "\n",
+    "var1 = operazione(5, 2, is_sum=False)\n",
     "var2 = operazione(3, 3)"
    ]
   },
@@ -249,12 +288,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per esempio un attributo è `complex.real` che contiene la parte reale di un numero complesso mentre un metodo è `list.append()` che permette di allungare una lista aggiungendo un elemento."
+    "Per esempio un attributo è `complex.real` che contiene la parte reale di un numero complesso mentre un metodo è `list.append()` che permette di allungare una lista aggiungendo un elemento. [Per avere più informazioni sulle liste clicca qui.](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +309,7 @@
        "[1, [10, 'carlo'], False, 10, -15.666, 'aggiunto!']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +404,7 @@
        "array([1. , 1.2, 1.4, 1.6, 1.8, 2. ])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +442,7 @@
        "array([2. , 1.8, 1.6, 1.4, 1.2, 1. ])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,18 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4, 7, 2, 5, 8],\n",
-       "       [1, 4, 3, 3, 0],\n",
-       "       [6, 6, 2, 9, 7]], dtype=int64)"
+       "array([[ 5,  2,  4,  4,  7],\n",
+       "       [ 2,  9,  2, 10,  6],\n",
+       "       [ 7,  2,  7,  7,  1]], dtype=int64)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,24 +507,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per prima cosa generiamo i punti a caso. Possiamo usare [`Generator.uniform()`](https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.uniform.html) che genera numeri random in una distribuzione uniforme in un intervallo. I _**kwargs_ sono _low, high_ (che definiscono l'intervallo) e _size_ che specifichiamo essere il numero di punti che vogliamo generare."
+    "Per prima cosa generiamo i punti a caso. Possiamo usare `Generator.uniform()` che genera numeri random in una distribuzione uniforme in un intervallo. I _**kwargs_ sono _low, high_ (che definiscono l'intervallo) e _size_ che specifichiamo essere il numero di punti che vogliamo generare. [Clicca qui per più informazioni.](https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.uniform.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-0.33009196,  0.5863942 ,  0.74064479, ...,  0.87785803,\n",
-       "         0.02386691,  0.90391328]),\n",
-       " array([-0.80732757,  0.58163729, -0.82197918, ..., -0.24879258,\n",
-       "        -0.04942242,  0.34951139]))"
+       "(array([-0.86252177,  0.91795102, -0.87868941, ...,  0.49595874,\n",
+       "         0.81270459,  0.68385041]),\n",
+       " array([-0.10520275, -0.30489969,  0.83642538, ...,  0.85407852,\n",
+       "        -0.90802063, -0.82953493]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,16 +547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ True,  True, False, ...,  True,  True,  True])"
+       "array([ True,  True, False, ...,  True, False, False])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7856841"
+       "7854546"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.1427364"
+       "3.1418184"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
